# CUNIXCourse

./: .gitmodules
COVID-19Monitor/: DataStructure.h  Func.c  Makefile  Monitor.c  map.config
CSVFile/: arguments.py  csvfile.py  student.csv  trans.py  说明.md
NNInference/: .gitignore  CMakeLists.txt  set.sh  说明.md
NNInference/MNIST/module/: my_mnist.pkl
NNInference/MNIST/src/: 1  main.py  mynet.py  trainlog.txt  ！
NNInference/include/: Layers.h  Net.h  mat_warper.h
NNInference/src/: Layers.cpp  Net.cpp  mat_warper.cpp  pure.cpp
NNInference/utils/: convert_data.py  convertdata.cpp  mynet.py  set_mxnet.py  test.py
fraction/: Makefile  fraction.cpp  fraction.h  test.cpp  说明.md
pouring/: pouring.py  说明.md
weigh/: weigh.py  说明.md
